added user model, schema and service registered endpoints in app.py added user endpoints to swagger config
